fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
   padding-top: 10px;
   margin: auto;
   max-width: 250px !important;
-  max-height: 175px;
-  height: 175px !important;
+  max-height: 150px;
+  height: 150px !important;
 }
 
 .row {
